# Covid-19-chatbot-using-IBM-cloud-and-deep-learning

./: CMakeLists.txt  COPYING  README.md  app.py  detail_live.py  function_action.py  mic_vad_streaming.py  microphone-speech-to-text.py  requirements.txt  rnnoise_demo  sample.env
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
Emotion recognition/: detection.csv  main_script.py
Heart rate measurement/: video.py
Heart rate measurement/new_update/: a.txt
data/: covid_ai_chatbot_skill.json
examples/: CMakeLists.txt  rnnoise_demo.c
include/: rnnoise.h
node-red app/: flows.json
src/: CMakeLists.txt  celt_lpc.c  common.h  denoise.c  pitch.c  train_compile.sh
static/: index.html
training/: bin2hdf5.py  dump_rnn.py  rnn_train.py
